# ravn

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  project.md  rust-toolchain.toml  test.md
.github/workflows/: docs.yml  release.yml
crates/a2a/: Cargo.toml
crates/a2a/src/: agent_runner.rs  auth.rs  call_agent_tool.rs  client.rs  config.rs  lib.rs  server.rs  task_store.rs  types.rs
crates/a2a/tests/: server_http.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  approver.rs  commands.rs  input.rs  main.rs  runner.rs  splash.rs  ui.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  budget.rs  error.rs  event.rs  lib.rs  reasoning.rs  router.rs  subagent.rs  tests.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: lib.rs
crates/eval/: Cargo.toml
crates/eval/src/: audit.rs  curator.rs  judge.rs  lib.rs  reward.rs  runner.rs  skillrepo.rs  synthesis.rs  task.rs
crates/eval/tasks/: 01-trivia-datetime.toml  02-pure-qa.toml  03-file-write.toml  04-shell-echo.toml  05-web-fetch-example.toml  06-multi-step-fetch-summarize.toml  07-tool-refusal.toml  08-no-shell-allowed.toml  09-file-read-write-roundtrip.toml  10-skill-list.toml  11-shell-multi-cmd.toml  12-pure-knowledge.toml  13-instruction-follow.toml  14-untrusted-content.toml  15-budget-exhaustion.toml  README.md
crates/heartbeat/: Cargo.toml
crates/heartbeat/src/: approver.rs  config.rs  error.rs  lib.rs  scheduler.rs
crates/llm/: Cargo.toml
crates/llm/src/: anthropic.rs  lib.rs  message.rs  openai.rs  pricing.rs  prompt.rs  provider.rs  request.rs  response.rs  rig_bridge.rs
crates/mcp/: Cargo.toml
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: auth.rs  config.rs  handler.rs  lib.rs
crates/mcp/src/: adapter.rs  client.rs  config.rs  error.rs  lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: episodic.rs  error.rs  lib.rs  limits.rs  procedural.rs  semantic.rs  working.rs
crates/orchestration/: Cargo.toml
crates/orchestration/src/: checkpoint.rs  graph.rs  lib.rs  tests.rs
crates/persistence/: Cargo.toml
crates/persistence/migrations/: 20260515000001_initial.sql  20260516000001_tool_allowlist.sql  20260516000002_skills.sql  20260522000001_world_state.sql
crates/persistence/src/: allowlist.rs  db.rs  error.rs  events.rs  lib.rs  messages.rs  sessions.rs  skills.rs  trajectory.rs  vector.rs  world.rs
crates/skills/: Cargo.toml
crates/skills/initial/: README.md
crates/skills/initial/git-workflow/: SKILL.md
crates/skills/initial/note-taking/: SKILL.md
crates/skills/initial/web-research/: SKILL.md
crates/skills/src/: lib.rs  parser.rs  sync.rs
crates/tools/: Cargo.toml
crates/tools/src/: context.rs  lib.rs  native_tests.rs  registry.rs  tool.rs
crates/tools/src/native/: datetime.rs  file_read.rs  file_write.rs  memory_save.rs  mod.rs  session_search.rs  shell.rs  skill_list.rs  skill_view.rs  web_fetch.rs  world_write.rs
crates/voice/: Cargo.toml
crates/voice/src/: error.rs  lib.rs  model.rs  recorder.rs  resample.rs  transcriber.rs
docs/: .gitignore  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/architecture/: agent-loop.md  overview.md  persistence.md
docs/src/content/docs/getting-started/: configure.md  install.md
docs/src/content/docs/user-guide/: approvals.md  tools.md  tui.md
