[workspace]
members = [
    "crates/core",
    "crates/embeddings",
    "crates/eval",
    "crates/heartbeat",
    "crates/llm",
    "crates/mcp",
    "crates/memory",
    "crates/orchestration",
    "crates/persistence",
    "crates/skills",
    "crates/tools",
    "crates/voice",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
authors = ["Max Körbächer <max@koerbaecher.io>"]
repository = "https://github.com/maxbot/ravn"

[workspace.dependencies]
# --- Async runtime ---
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
futures = "0.3"

# --- Serde / schema ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# --- Error handling ---
thiserror = "2"
anyhow = "1"

# --- Observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# --- Persistence (D2: sqlx default + rusqlite for FTS5/vec0) ---
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"

# --- LLM (D1: rig-core for provider backends + raw ReAct loop on top) ---
rig-core = "0.37"
# async-openai retained as documented fallback if rig-core lacks an
# OpenAI-specific feature we need; not pulled in by any crate yet.
async-openai = "0.38"

# --- TUI (D4: ratatui from Phase 0, Tauri added in Phase 4) ---
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# --- IDs / time ---
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
base64 = "0.22"

# --- HTTP ---
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2"] }

# --- MCP ---
rmcp = { version = "1", features = ["client", "transport-child-process"] }
toml = "0.8"

# --- Scheduling (Phase 4.10 heartbeats) ---
tokio-cron-scheduler = "0.15"

# --- Voice input (Phase 4.7): mic capture + local Whisper STT ---
cpal = "0.17"
whisper-rs = "0.16"
hound = "3"

# --- Skills / Misc ---
serde_yaml = "0.9"
sha2 = "0.10"
postcard = { version = "1", features = ["alloc"] }

# --- Internal workspace crates ---
ravn-core = { path = "crates/core" }
ravn-embeddings = { path = "crates/embeddings" }
ravn-heartbeat = { path = "crates/heartbeat" }
ravn-llm = { path = "crates/llm" }
ravn-mcp = { path = "crates/mcp" }
ravn-memory = { path = "crates/memory" }
ravn-orchestration = { path = "crates/orchestration" }
ravn-persistence = { path = "crates/persistence" }
ravn-skills = { path = "crates/skills" }
ravn-tools = { path = "crates/tools" }
ravn-voice = { path = "crates/voice" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
