[package]
name = "ravn-a2a"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# The `a2a-serve` binary is auto-detected from src/bin/.

[dependencies]
ravn-core.workspace = true
ravn-llm.workspace = true
ravn-tools.workspace = true
ravn-persistence.workspace = true
ravn-embeddings.workspace = true
ravn-memory.workspace = true

axum.workspace = true
tower-http.workspace = true
jsonwebtoken.workspace = true
async-stream.workspace = true
schemars.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
dirs = "5"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
futures = { workspace = true }
