[package]
name = "ravn-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ravn"
path = "src/main.rs"

[dependencies]
ravn-core.workspace = true
ravn-llm.workspace = true
ravn-persistence.workspace = true

tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true
