[package]
name = "ravn-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ravn"
path = "src/main.rs"

[dependencies]
ravn-a2a.workspace = true
ravn-core.workspace = true
ravn-embeddings.workspace = true
ravn-heartbeat.workspace = true
ravn-llm.workspace = true
ravn-mcp.workspace = true
ravn-memory.workspace = true
ravn-persistence.workspace = true
ravn-skills.workspace = true
ravn-tools.workspace = true
ravn-voice.workspace = true

async-trait.workspace = true

tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true
uuid.workspace = true
dirs = "5"
