[package]
name = "ravn-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ravn-embeddings.workspace = true
ravn-llm.workspace = true
ravn-memory.workspace = true
ravn-persistence.workspace = true
ravn-tools.workspace = true

tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
async-stream = "0.3"
schemars.workspace = true
