[package]
name = "ravn-embeddings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true

# EmbeddingGemma-300M via ONNX-Runtime (D12, revised 2026-05-20).
# Default fastembed features cover ONNX + hf-hub; no candle backend.
fastembed = "5"
parking_lot = "0.12"
