[package]
name = "ravn-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ravn-eval"
path = "src/bin/ravn-eval.rs"

[[bin]]
# Phase 6.1: export logged ReAct trajectories as JSONL for RL tooling.
name = "trajectory-export"
path = "src/bin/trajectory-export.rs"

[dependencies]
ravn-core.workspace = true
ravn-llm.workspace = true
ravn-memory.workspace = true
ravn-persistence.workspace = true
ravn-tools.workspace = true

tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs = "5"

[dev-dependencies]
tempfile = "3"
