[package]
name = "ravn-heartbeat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ravn-core.workspace = true
ravn-llm.workspace = true
ravn-memory.workspace = true
ravn-persistence.workspace = true
ravn-tools.workspace = true
ravn-embeddings.workspace = true

tokio.workspace = true
tokio-util.workspace = true
tokio-cron-scheduler.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
