[package]
name = "ravn-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "agent-mcp"
path = "src/bin/agent-mcp.rs"

[dependencies]
ravn-tools.workspace = true
ravn-persistence.workspace = true
ravn-embeddings.workspace = true

# rmcp is a client elsewhere; here we use its server side over stdio.
rmcp = { workspace = true, features = ["server", "transport-io"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
dirs = "5"

[dev-dependencies]
tempfile = "3"
