[package]
name = "ravn-mcp-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "agent-mcp"
path = "src/bin/agent-mcp.rs"

[dependencies]
ravn-tools.workspace = true
ravn-persistence.workspace = true
ravn-embeddings.workspace = true

# rmcp is a client elsewhere; here we use its server side over stdio (5.1) and
# Streamable HTTP (5.1 HTTP transport, axum-mounted; 5.3 auth in front).
rmcp = { workspace = true, features = [
    "server",
    "transport-io",
    "server-side-http",
    "transport-streamable-http-server",
] }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
dirs = "5"

[dev-dependencies]
tempfile = "3"
