[package]
name = "ravn-persistence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
sqlx.workspace = true
rusqlite.workspace = true
sqlite-vec.workspace = true

[dev-dependencies]
tempfile = "3"
