[package]
name = "ravn-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ravn-llm.workspace = true
ravn-memory.workspace = true
ravn-persistence.workspace = true

tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
tracing.workspace = true

chrono.workspace = true
reqwest.workspace = true
html2text = "0.13"

[dev-dependencies]
tempfile = "3"
